--- a/index.html
+++ b/index.html
@@ -138,27 +138,28 @@
                                             </i>
                                             <i v-else class="tiny material-icons">unfold_more</i>
                                         </th>
-                                        <th class="noselect pointer center" v-on:click="SorteTable(3)">CE
+                                        <th class="noselect pointer center" v-on:click="SorteTableN(3)">CE
                                             <i v-if="Math.abs(sort) == 3"
                                                 class="tiny material-icons">{{((Math.sign(sort) == 1) ? 'expand_less'
                                                 : 'expand_more')}}
                                             </i>
                                             <i v-else class="tiny material-icons">unfold_more</i>
                                         </th>
-                                        <th class="noselect pointer center" v-on:click="SorteTable(4)">CE Errati
+                                        <th class="noselect pointer center" v-on:click="SorteTableN(4)">CE Errati
                                             <i v-if="Math.abs(sort) == 4"
                                                 class="tiny material-icons">{{((Math.sign(sort) == 1) ? 'expand_less'
                                                 : 'expand_more')}}
                                             </i>
                                             <i v-else class="tiny material-icons">unfold_more</i>
                                         </th>
-                                        <th class="noselect pointer center" v-on:click="SorteTable(5)">Controllati
+                                        <!--<th class="noselect pointer center" v-on:click="SorteTableN(5)">Controllati
                                             <i v-if="Math.abs(sort) == 5"
                                                 class="tiny material-icons">{{((Math.sign(sort) == 1) ? 'expand_less'
                                                 : 'expand_more')}}
                                             </i>
                                             <i v-else class="tiny material-icons">unfold_more</i>
-                                        </th>
+                                        </th>-->
+                                        <th class="noselect center">Controllati</th>
                                         <th></th>
                                     </tr>
                                 </thead>
@@ -248,7 +249,7 @@
     </div>
     <!--<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>-->
     <!--JavaScript at end of body for optimized loading-->
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="resource/js/main.js"></script>
 </body>
 
