--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     </div>
                     <div class="modal-footer grey darken-2">
                         <a v-show="modal_link" v-on:click="DownloadCELIst(modal_CP, modal_CE)"
-                            class="modal-close waves-effect waves-green btn-flat">Download</a>
+                            class="modal-close waves-effect waves-green btn-flat text-white grey darken-1">Download</a>
                         <a v-on:click="modal_show_data = false"
                             class="modal-close waves-effect waves-green btn-flat red">Close</a>
                     </div>
@@ -249,7 +249,7 @@
     </div>
     <!--<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>-->
     <!--JavaScript at end of body for optimized loading-->
-    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
     <script src="resource/js/main.js"></script>
 </body>
 
